# myc3lium

./: .env.example  .gitignore  AGENTS.md  API_MESHTASTIC.md  ARCHITECTURE.md  CHANGELOG.md  CRT_SHADER_GUIDE.md  DEPLOY_MESHTASTIC.md  FINAL-EXEC-CONFIG.md  GRID_80COL_MIGRATION.md  HEARTBEAT.md  HYPHA_DEV_GUIDE.md  IMPLEMENTATION_PLAN.md  INTEGRATION_NOTES.md  MEMORY.md  MESHTASTIC_ROADMAP.md  MIGRATION.md  MOCKUP_ANALYSIS.md  MOCKUP_REVIEW.md  MYC3LIUM_BIBLE_V3.md  NETWORK_TOPOLOGY.md  NIGHT_SUMMARY_2026-03-18.md  PAGES.md  PHASE2_COMPLETE.md  PHASE2_MESHTASTIC_COMPLETE.md  PHASE2_PR1_IMPLEMENTATION.md  PHASE_1_HANDOFF.txt  PHASE_1_IMPLEMENTATION_SUMMARY.md  PR_CRT_ENHANCEMENTS.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  SECURITY_AUDIT_REPORT.md  SESSION_6_HANDOFF.md  SESSION_NOTES.md  SOUL.md  SUBAGENT_COMPLETION_PHASE2.md  SYSTEM-IMPROVEMENTS-GUIDE.md  TASK_COMPLETION_SUMMARY.md  TECH_STACK.md  (+30 more)
.github/: dependabot.yml
backend/: .ruff.toml  CUSTOM_ROUTING.md  hardware_drivers_real.py  hardware_interfaces.py  intelligence.py  intelligence_api.py  mesh_analytics_api.py  mesh_graph_analyzer.py  myc3lium_router.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt.pre-cve-fix  security.py
backend/app/: __init__.py  auth.py  config.py  config_models.py  db.py  main.py  models.py  rate_limit.py  websocket.py
backend/app/middleware/: auth.py
backend/app/routers/: auth_router.py  cameras.py  config.py  mesh.py  meshtastic.py  messages.py  nodes.py  satellites.py  sensors.py  threads.py  ws.py
backend/app/services/: __init__.py  auth_service.py  backhaul_service.py  batctl_service.py  camera_service.py  config_service.py  live_data_source.py  mesh_store.py  meshtastic_bridge.py  meshtastic_service.py  mock_data.py  network_apply_service.py  reticulum_service.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_main.py  test_mesh_store.py  test_meshtastic_service.py  test_meshtastic_ws.py  test_messages_router.py  test_mock_data.py  test_models.py  test_new_models.py  test_nodes_router.py  test_security_hardening.py  test_threads_router.py  test_websocket.py  test_websocket_endpoint.py  test_websocket_updates.py
backend/tests/integration/: __init__.py  conftest.py  test_thread_message_flows.py  test_websocket_integration.py
firmware/components/: CMakeLists.txt
firmware/components/main/: CMakeLists.txt  main.cpp  myc3_config.h
firmware/components/myc3_core/: CMakeLists.txt  myc3_core.cpp  myc3_core.h
firmware/components/myc3_halow/: CMakeLists.txt  halow_driver.cpp  halow_driver.h
prototypes/obd2view/: .gitignore  Cargo.toml  NEXT_STEPS.md  README.md  README_PROTOTYPE.md  SESSION_NOTES.md  architecture.md
(+322 files in other folders)
