[package]
name = "obd2view"
version = "0.1.0"
edition = "2021"
authors = ["dlorp"]
license = "MIT"
description = "Terminal-based OBD2 diagnostic monitor with PSX aesthetic"
repository = "https://github.com/dlorp/obd2view"

[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-serial = "5.4"

# Data
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Config
toml = "0.8"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
